objects/SVMXC__Stock_History__c.object
<CustomObject>
    <customHelpPage>SVMXC__SVMX_LaunchHelp</customHelpPage>
    <description>All ServiceMax transactions such as RMA, Shipment, Parts Receipt etc. that impact inventory are recorded in this object</description>
    <fields>
        <fullName>SVMXC__Change_Type__c</fullName>
        <description>Change Type Indicates if the type of change in product quantity was “Increase” or “Decrease”.</description>
        <inlineHelpText>Change Type Indicates if the type of change in product quantity was “Increase” or “Decrease”.</inlineHelpText>
        <label>Change Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Increase</fullName>
                </value>
                <value>
                    <fullName>Decrease</fullName>
                </value>
                <value>
                    <fullName>Set</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Changed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the salesforce user that has initiated original transaction which resulted in stock change.</description>
        <inlineHelpText>Name of the salesforce user that has initiated original transaction which resulted in stock change.</inlineHelpText>
        <label>Changed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Stock_History_Changed_By</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Cost__c</fullName>
        <description>Price of the product from the default pricebook at the time of transaction.</description>
        <inlineHelpText>Price of the product from the default pricebook at the time of transaction</inlineHelpText>
        <label>Cost</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SVMXC__Currency__c</fullName>
        <description>Currency of the product price at the time of the transaction, which resulted in stock change.</description>
        <inlineHelpText>Currency of the product price at the time of the transaction, which resulted in stock change.</inlineHelpText>
        <label>Currency</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Date_Changed__c</fullName>
        <description>Date/time when the change in product stock was made.</description>
        <inlineHelpText>Date/time when the change in product stock was made.</inlineHelpText>
        <label>Date Changed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__From_Product_Stock__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Source (From) Product Stock record involved in the stock transaction. Reference to an existing Product Stock record in ServiceMax</description>
        <inlineHelpText>From Product Stock</inlineHelpText>
        <label>From Product Stock</label>
        <referenceTo>SVMXC__Product_Stock__c</referenceTo>
        <relationshipLabel>Serial History (From Product Stock)</relationshipLabel>
        <relationshipName>Stock_History_From</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Inventory_Account__c</fullName>
        <description>Inventory account number for this location. Used for costing/accounting purposes.</description>
        <inlineHelpText>Inventory account number for this location. Used for costing/accounting purposes.</inlineHelpText>
        <label>Inventory Account</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Inventory_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Inventory process that resulted in this stock transaction.</description>
        <label>Inventory Process</label>
        <referenceTo>SVMXC__ServiceMax_Processes__c</referenceTo>
        <relationshipLabel>Stock History</relationshipLabel>
        <relationshipName>Stock_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__IsPartnerRecord__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicates if transaction is for/ by a Partner or not.</description>
        <inlineHelpText>Flag indicates if transaction is for/ by a Partner or not.</inlineHelpText>
        <label>IsPartnerRecord</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__IsPartner__c</fullName>
        <description>Flag indicates if transaction is for/ by a Partner or not.</description>
        <formula>IF( SVMXC__IsPartnerRecord__c ,&quot;True&quot;, &quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Flag indicates if transaction is for/ by a Partner or not.</inlineHelpText>
        <label>Is Partner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Current physical location of the product. This is a lookup to an existing site record.</description>
        <inlineHelpText>Current physical location of the product. This is a lookup to an existing site record.</inlineHelpText>
        <label>Location</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipName>Location</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Negative_Stock__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicates if this transaction resulted in negative stock or not.</description>
        <inlineHelpText>Flag indicates if this transaction resulted in negative stock or not.</inlineHelpText>
        <label>Negative Stock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Notified_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User notified of negative stock. Reference to an existing Salesforce user record.</description>
        <inlineHelpText>User notified of negative stock. Reference to an existing Salesforce user record.</inlineHelpText>
        <label>Notified User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Stock_History_Notified_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Partner_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Account, set by trigger.</description>
        <inlineHelpText>Lookup to Partner Account.</inlineHelpText>
        <label>Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Stock History</relationshipLabel>
        <relationshipName>Stock_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Partner_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Contact, set by trigger.</description>
        <inlineHelpText>Lookup to Partner Contact.</inlineHelpText>
        <label>Partner Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Stock History</relationshipLabel>
        <relationshipName>Stock_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Parts_Request_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the Parts Request line.</description>
        <inlineHelpText>Reference to the Parts Request line.</inlineHelpText>
        <label>Parts Request Line</label>
        <referenceTo>SVMXC__Parts_Request_Line__c</referenceTo>
        <relationshipName>Stock_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Parts_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the Parts Request.</description>
        <inlineHelpText>Reference to the Parts Request.</inlineHelpText>
        <label>Parts Request</label>
        <referenceTo>SVMXC__Parts_Request__c</referenceTo>
        <relationshipName>Stock_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Product_Serial__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Select Product Serial</description>
        <inlineHelpText>Select Product Serial</inlineHelpText>
        <label>Product Serial</label>
        <referenceTo>SVMXC__Product_Serial__c</referenceTo>
        <relationshipLabel>Serial History</relationshipLabel>
        <relationshipName>Stock_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Product_Stock__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product Stock record affected by the stock transaction. Reference to an existing product stock record in ServiceMax</description>
        <label>Product Stock</label>
        <referenceTo>SVMXC__Product_Stock__c</referenceTo>
        <relationshipLabel>Stock History (Product Stock)</relationshipLabel>
        <relationshipName>Stock_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the product. This is a lookup to an existing salesforce product record.</description>
        <inlineHelpText>Name of the product. This is a lookup to an existing salesforce product record.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Stock_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Quantity_after_change2__c</fullName>
        <description>Stock quantity in the given product+location+status after the transaction.</description>
        <inlineHelpText>Stock quantity in the given product+location+status after the transaction.</inlineHelpText>
        <label>Qty after change</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Quantity_before_change2__c</fullName>
        <description>Stock quantity in the given product+location+status before the transaction.</description>
        <inlineHelpText>Stock quantity in the given product+location+status before the transaction.</inlineHelpText>
        <label>Qty before change</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__RMA_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the RMA/Shipment Line.</description>
        <inlineHelpText>Reference to the RMA/Shipment Line.</inlineHelpText>
        <label>RMA Line</label>
        <referenceTo>SVMXC__RMA_Shipment_Line__c</referenceTo>
        <relationshipName>Stock_History_RMA_Line</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__RMA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the RMA/Shipment Order.</description>
        <inlineHelpText>Reference to the RMA/Shipment Order.</inlineHelpText>
        <label>RMA</label>
        <referenceTo>SVMXC__RMA_Shipment_Order__c</referenceTo>
        <relationshipName>Stock_History_RMA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the service order line.</description>
        <inlineHelpText>Reference to the service order line.</inlineHelpText>
        <label>Work Details</label>
        <referenceTo>SVMXC__Service_Order_Line__c</referenceTo>
        <relationshipLabel>Stock History</relationshipLabel>
        <relationshipName>Stock_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the Service Order.</description>
        <inlineHelpText>Reference to the Service Order.</inlineHelpText>
        <label>Work Order</label>
        <referenceTo>SVMXC__Service_Order__c</referenceTo>
        <relationshipLabel>Stock History</relationshipLabel>
        <relationshipName>Stock_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Shipment_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the RMA/Shipment Line.</description>
        <inlineHelpText>Reference to the RMA/Shipment Line.</inlineHelpText>
        <label>Shipment Line</label>
        <referenceTo>SVMXC__RMA_Shipment_Line__c</referenceTo>
        <relationshipName>Stock_History_Shipment_Line</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Shipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the RMA/Shipment Order.</description>
        <inlineHelpText>Reference to the RMA/Shipment Order.</inlineHelpText>
        <label>Shipment</label>
        <referenceTo>SVMXC__RMA_Shipment_Order__c</referenceTo>
        <relationshipName>Stock_History_Shipment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Status__c</fullName>
        <description>Current status of product.</description>
        <inlineHelpText>Current status of product.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>In Transit</fullName>
                </value>
                <value>
                    <fullName>Consumed</fullName>
                </value>
                <value>
                    <fullName>Returned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Stock_Adjustment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the Stock Adjustment.</description>
        <inlineHelpText>Reference to the Stock Adjustment.</inlineHelpText>
        <label>Stock Adjustment</label>
        <referenceTo>SVMXC__Stock_Adjustment__c</referenceTo>
        <relationshipName>Stock_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Stock_Transfer_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the Stock Transfer line.</description>
        <inlineHelpText>Reference to the Stock Transfer line.</inlineHelpText>
        <label>Stock Transfer Line</label>
        <referenceTo>SVMXC__Stock_Transfer_Line__c</referenceTo>
        <relationshipName>Stock_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Stock_Transfer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the Stock Transfer.</description>
        <inlineHelpText>Reference to the Stock Transfer.</inlineHelpText>
        <label>Stock Transfer</label>
        <referenceTo>SVMXC__Stock_Transfer__c</referenceTo>
        <relationshipName>Stock_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Stock_Value__c</fullName>
        <description>Value of the stock quantity at the time of transaction</description>
        <formula>SVMXC__Transaction_Quantity2__c *  SVMXC__Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Value of the stock quantity at the time of transaction</inlineHelpText>
        <label>Stock Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SVMXC__To_Product_Stock__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Target (To) Product Stock record involved in the stock transaction. Reference to an existing Product Stock record in ServiceMax</description>
        <label>To Product Stock</label>
        <referenceTo>SVMXC__Product_Stock__c</referenceTo>
        <relationshipLabel>Serial History (To Product Stock)</relationshipLabel>
        <relationshipName>Stock_History_To</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Transaction_Quantity2__c</fullName>
        <description>Product quantity in the source transaction.</description>
        <inlineHelpText>Product quantity in the source transaction.</inlineHelpText>
        <label>Transaction Qty</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Transaction_Type__c</fullName>
        <description>Status should be be assigned based on various original transactions which resulted in stock change.</description>
        <inlineHelpText>Status should be be assigned based on various original transactions which resulted in stock change.</inlineHelpText>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RMA Receipt</fullName>
                </value>
                <value>
                    <fullName>Shipment</fullName>
                </value>
                <value>
                    <fullName>SVO Receipt</fullName>
                </value>
                <value>
                    <fullName>SVO Usage</fullName>
                </value>
                <value>
                    <fullName>Parts Receipt</fullName>
                </value>
                <value>
                    <fullName>Stock Transfer</fullName>
                </value>
                <value>
                    <fullName>Stock Adjustment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Stock History</label>
    <nameField>
        <displayFormat>SHIST-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stock History</pluralLabel>
    <recordTypes>
        <fullName>SVMXC__Serial_History</fullName>
        <active>true</active>
        <description>Serial History</description>
        <label>Serial History</label>
    </recordTypes>
    <recordTypes>
        <fullName>SVMXC__Stock_History</fullName>
        <active>true</active>
        <description>Stock History</description>
        <label>Stock History</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>